--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Navbar */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.7rem 2rem;
+  position: fixed;
+  z-index: 3;
+  width: 100%;
+  top: 0;
+  opacity: 0.9;
+  /* font-family: 'Righteous', cursive; */
+  background-color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar ul {
+  display: flex;
+  list-style-type: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar a {
+  color: #fff;
+  padding: 0.45rem;
+  margin: 0 0.25rem;
+  text-decoration: none;
+  color: rgb(6, 175, 253);
+  font-size: 1.5vw;
+}
+
+.navbar a:hover {
+  color: rgb(3, 75, 109);
+}
+.navbar h1 a:hover {
+  color: rgb(3, 75, 109);
+}
+
+.navbar h1 a {
+  font-size: 2.5vw;
+}
+
+/* Landing Page */
+.landing {
+  position: relative;
+  background: url('https://cdn11.bigcommerce.com/s-cknish7l/images/stencil/1000x1000/products/461/1559/1920sctcmystic__23675.1409453037.jpg?c=2')
+    no-repeat center center/cover;
+  height: 100vh;
+}
+
+.landing-inner {
+  color: #fff;
+  height: 100%;
+  width: 80%;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.landing-inner p {
+  font-size: 1.5vw;
+  margin-bottom: 2vw;
+  margin-top: 2vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.landing-inner h1 {
+  font-size: 2vw;
+}
+
+.landing-buttons {
+  width: 15vw;
+  display: flex;
+  justify-content: space-between;
+}
+
+.MuiButton-label {
+  font-weight: bold;
+}
+
+.landing-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
 }
